corrected layout of triple text block on mobile and tablet

--- a/web/app/themes/ppj/src/sass/components/triple-text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/triple-text-block.sass
@@ -23,7 +23,7 @@
     border-bottom: .2rem solid $color-very-light
     display: flex
     flex-direction: row
-    padding: $common-spacing
+    padding: $common-spacing 0
     width: 100%
 
     &:first-child
@@ -37,6 +37,7 @@
       align-items: center
       border-bottom: none
       flex-direction: column
+      padding: $common-spacing
       width: 33%
 
     &:last-child
@@ -54,10 +55,12 @@
       width: 12rem
 
   &__text-container
-    text-align: center
+    margin-left: $common-spacing
 
     @include bp('portrait')
       font-size: $font-size-medium
+      margin-left: 0
+      text-align: center
 
     @include bp('large')
       font-size: $font-size-really-very-large
@@ -80,4 +83,5 @@
   &--text-only
     .triple-text-block
       &__text-container
+        margin-left: 0
         text-align: left
